아라한사님 소스 Fork 후 첫 Commit   1) 온습도 값 조회   1) 온습도 값 저장 및 업데이트

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
+    <script>
+        document.location.href= "/dackjang/view";
+    </script>
 </head>
 <body>
-hello appengine + maven<br>
-<a href="/spring">스프링으로 이동!</a>
 </body>
 </html>
